--- a/css/about-us.css
+++ b/css/about-us.css
@@ -197,16 +197,35 @@ font-family: 'Roboto Serif', serif;*/
     width: 90%;
     height: 100vh;
     /* border: 1px solid blue; */
-    margin: 60px auto;
+    margin: 30px auto;
     display: flex;
     justify-content: space-between;
 }
 
 
-.flexs{
+.image-text-holder{
     width: 40%;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     /* border: 1px solid red ; */
+}
+
+
+.image-text-holder > h2{
+    font-size: 30px;
+    margin: 30px;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+.image-text-holder > p{
+    font-size: 20px;
+    margin: 20px;
+    line-height: 40px;
+    font-family: 'Arimo', sans-serif;
 }
 
 
@@ -229,7 +248,7 @@ font-family: 'Roboto Serif', serif;*/
 
 .contain{
     width: 40%;
-    height: 100vh;
+    height: 105vh;
     /* border: 1px solid black; */
     background-color: #ffffff;
 }
@@ -238,7 +257,7 @@ font-family: 'Roboto Serif', serif;*/
 .contains{
     width: 90%;
     height: 79vh;
-    top: 60px;
+    top: 80px;
     /* border: 1px solid black; */
     position: absolute;
     /* left: 40px; */
@@ -311,3 +330,265 @@ font-family: 'Roboto Serif', serif;*/
 }
 
 
+@media (max-width:1054px){
+    .image-text-holder{
+        width: 35%;
+    }
+
+    
+    
+    .flex{
+        width: 62%;
+    }
+    
+    
+    .contains{
+        background-position: center;
+    } 
+}
+
+
+@media (max-width:780px){
+
+
+    .text-holder > h2{
+        margin-top: 60px;
+    }
+    
+    
+    .text-holder > p{
+        height: 30vh;
+        font-size: 15px;
+        margin-left: 70px;
+        line-height: 30px;
+    }
+    
+    
+    .main{
+        /* margin-left: 80px; */
+        background-color: black;
+        border-radius: 10px;
+        width: 60%;
+    }
+    
+    
+    .second-part{
+        height: 110vh;
+    }
+    
+    .second-part > h2{
+        font-size: 45px;
+        margin: 30px auto;
+    }
+    
+    
+    .second-part > p{
+        line-height: 35px;
+        font-size: 18px;
+    }
+    
+    
+    .text-part > h5{
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 30px;
+        margin: 20px auto;
+    }
+    
+    
+    .text-part > p{
+        font-size: 15px;
+    }
+    
+    
+    .text-part > h6{
+        text-align: center;
+        font-family: 'Arimo', sans-serif;
+        font-size: 18px;
+        font-weight: 100;
+        margin: 13px auto;
+    }
+    
+    
+    
+    .content{
+        width: 16%;
+        height: 50px;
+        text-align: center;
+        background-color: black;
+        border-radius: 10px;
+        position: absolute;
+        left: 42%;
+        bottom: 40px;
+    }
+    
+    
+    .content> p{
+        color: #ffffff;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 15px;
+    }
+    
+    
+    .contain{
+        height: 104vh;
+    }
+    
+    
+    .contains{
+        width: 94%;
+        left: 55px;
+        background-position: center;
+    }
+}
+
+
+@media (max-width:450px){
+    .hero-section{
+        width: 90%;
+        height: 110vh;
+    }
+
+    .empty{
+        width: 122%;
+    }
+    
+    .card-container{
+        left: 40px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    
+    .cards{
+        width: 80%;
+        left: 35%;
+    }
+    
+    
+    .text-holder{
+        width: 70%;
+        height: fit-content;
+        /* border: 1px solid black; */
+    }
+    
+    .text-holder > h2{
+        margin-top: 40px;
+        font-size: 40px;
+        margin-left: 50px;
+    }
+    
+    
+    .text-holder > p{
+        margin-top: 15px;
+        font-size: 15px;
+        line-height: 25px;
+        height: 30vh;
+        width: 90%;
+        margin-left: 40px;
+        text-align: center;
+    }
+    
+    
+    .main{
+        width: 80%;
+        font-family: 'Arimo', sans-serif;
+        line-height: 40px;
+        margin-left: 48px;
+    }
+    
+    
+    .main > p{
+        font-size: 12px;
+    }
+    
+    
+    
+    .second-part{
+        width: 110%;
+        height: 120vh;
+    }
+    
+    
+    .second-part > h2{
+        font-size: 30px;
+    }
+    
+    
+    .second-part > p{
+        line-height: 35px;
+        font-size: 15px;
+        margin: 20px auto;
+        width: 80%;
+    }
+    
+    
+    
+    
+    .content{
+        width: 25%;
+        left: 39%;
+    }
+    
+    
+    .content> p{
+        font-size: 12px;
+    }
+    
+    
+    .third-part{
+        width: 110%;
+        height: 113vh;
+    }
+    
+    
+    .image-text-holder > h2{
+        font-size: 25px;
+        margin: 20px auto;
+    }
+    
+    
+    .image-text-holder > p{
+        font-size: 20px;
+        margin: 10px auto;
+        line-height: 40px;
+    }
+    
+    
+    
+    .contain{
+        width: 60%;
+        height: 107vh;
+        /* border: 1px solid black; */
+        background-color: #ffffff;
+    }
+    
+    
+    .contains{
+        width: 100%;
+        left: 40px;
+        background-position: center;
+    }
+    
+    
+    
+    .fourth{
+        width: 110%;
+    }
+    
+     
+    .text-area > h6{
+        margin: 30px auto;
+    }
+    
+    
+    .text-area > p{
+        font-size: 12px;
+    }
+    
+    .hero{
+        width: 100%;
+        height: 20vh;
+        background-color: #333333;
+    }
+}
