--- a/css/contact.css
+++ b/css/contact.css
@@ -4,19 +4,24 @@
     box-sizing: border-box;
 }
 
+body{
+    border: 1px solid blue;
+}
+
+
 .hero{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 150vh;
+    border: 1px solid red;
+    height:fit-content;
 }
 
 
 .hero-container{
     display: flex;
     align-items: center;
-    /* justify-content: center; */
     flex-direction: column;
     width: 100%;
     height: 150vh;
@@ -46,6 +51,7 @@
     background-position: center;
     background-size: cover;
     bottom: 90px;
+    border: 1px solid red;
     left: 60px;
     height: 120vh;
 }
@@ -53,6 +59,7 @@
 
 .bottom-right{
     padding-left: 30px;
+    border: 1px solid red;
     width: 45%;
     position: absolute;
     height: 105vh;
@@ -428,6 +435,7 @@ button{
     display: flex;
     align-items: center;
     width: 65%;
+    border: 1px solid red;
     height: 100vh;
 }
 
@@ -508,9 +516,4 @@ a{
 span{
     font-size: 20px;
 }
-
-
-
-
-
 
